<resources>
    <string name="app_name">Mini Deezer</string>
    <string name="title_home">Home</string>
    <string name="title_genres">Genres</string>
    <string name="title_likes">Liked Songs</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_recipes">Recipes</string>
    <string name="title_recipe_detail">Recipe Detail</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="favorites">Favorites</string>
</resources>