<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appcent_case_study.ui.genres.GenreFragment"
        android:label="@string/title_genres"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_likes"
        android:name="com.example.appcent_case_study.ui.likes.LikesFragment"
        android:label="@string/title_likes"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.appcent_case_study.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.appcent_case_study.ui.recipes.RecipeFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_navigation_recipes_to_navigation_recipe_detail"
            app:destination="@id/navigation_recipe_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recipe_detail"
        android:name="com.example.appcent_case_study.ui.recipe_details.RecipeDetailFragment"
        android:label="@string/title_recipe_detail"
        tools:layout="@layout/fragment_recipe_details" >

        <argument
            android:name="recipeId"
            app:argType="long" />
    </fragment>

</navigation>